# pylibvna

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  Plan  README  README-RELEASE  TODO  meson.build  pyproject.toml
.github/scripts/: install-libvna  install-libvna.sh
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: cal-error-modeling.rst  cal-examples.rst  cal-menu.rst  cal-model.rst  cal.rst  conf.py  conv.rst  data.rst  index.rst
docs/source/_static/: draw-vna-diagram
docs/source/_static/keep/: dodekagon.pl  hexagon.pl
examples/: 1x1.pyt  1x1m.pyt  2PR.pyt  2x1.pyt  2x2ab.pyt  JA4220-AL.s2p  Makefile  T16-EM.pyt  TRL.pyt  UT.pyt  cal-SOLT.py  cal-TRL.py  compare-same.py  convert-file.py  convert-parameters.py  embed.pyt  error-modeling.py  lpad-conv.py  lpad.py  pyt2py.py  random_error_terms.py  sim_VNA.py
libvna/: __init__.py  cal.pxd  cal.pyx  conv.pxd  conv.pyx  data.pxd  data.pyx  meson.build
src/: _custom_build.py
src/libvna/: cal.pxd  cal.pyx  conv.pyx  data.pyx
src/vna/: __init__.py  cal.pxd  cal.pyx  conv.pxd  conv.pyx  data.pxd  data.pyx
tests/: test_cal.py  test_conv.py  test_data.py
tools/: build-deps-from-source  get-tar-gz  install-libvna  install-libvna-rpm  install-libvna-windows-native.py  install-libvna-windows-pkg  repair-windows
