[build-system]
build-backend = "mesonpy"
requires = ["Cython", "meson", "meson-python", "numpy", "wheel"]


[project]
name         = "libvna"
version      = "0.0.5-12"
description  = "Vector network analyzer calibration, load, store and convert"
readme = { file = "README", content-type = "text/plain" }
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "D Scott Guthridge", email = "scott_guthridge@rompromity.net" }
]
keywords = [
    "Electronics",
    "RF",
    "S-Parameters",
    "Test and Measurement",
    "Touchstone",
    "VNA",
]
dependencies = [
    "numpy"
]

[project.urls]
Documentation = "https://pylibvna.readthedocs.io/en/latest/"
Repository = "https://github.com/scott-guthridge/pylibvna"

[project.optional-dependencies]
test = ["unittest"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-search"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
