[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0,<0.19.0",
    "Cython>=3.0.8,<3.1.0",
    "ninja",
    "numpy>=2.0.0,<2.3",
    "numpy>=2.1.0rc1; python_version>='3.13'",
]

[project]
name         = "libvna"
version      = "0.2.1"
description  = "Vector network analyzer calibration, load, store and convert"
readme = { file = "README", content-type = "text/plain" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "D Scott Guthridge", email = "scott_guthridge@rompromity.net" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = [
    "Electronics",
    "RF",
    "S-Parameters",
    "Test and Measurement",
    "Touchstone",
    "VNA",
]
dependencies = [
    "numpy"
]

[project.urls]
Documentation = "https://libvna.readthedocs.io/en/latest/"
Repository = "https://github.com/scott-guthridge/pylibvna"

[project.optional-dependencies]
test = ["unittest"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-search"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.cibuildwheel]
build-frontend = "build"
# build-verbosity = "3"
# config-settings = "build-dir=build"
# build-frontend = { name = "pip", args = ["--no-build-isolation"] }

[tool.cibuildwheel.linux]
before-build = """\
    set -e\n\
    yum install -y gcc libyaml-devel\n\
    pip install requests\n\
    python3 {project}/tools/install-libvna-rpm\n\
"""
environment-pass = "RUNNER_OS"
manylinux-aarch64-image = "manylinux2014"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
before-build = """\
    pip3 -v install cython!=3.0.3 meson-python ninja numpy>=2.0.0 packaging requests\n\
    tools/build-deps-from-source -t $AUTH_TOKEN\n\
"""
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=/usr/local/lib delocate-listdeps {wheel} &&\n\
    DYLD_LIBRARY_PATH=/usr/local/lib delocate-wheel --require-archs \
        {delocate_archs} -w {dest_dir} {wheel}\n\
"""

[tool.cibuildwheel.windows]
environment = """\
    PKG_CONFIG_PATH='C:/opt/libvna/lib/pkgconfig'\n\
"""
before-build = """\
  pip install numpy meson-python meson-python cython>=3.0.8 ninja\n\
"""
repair-wheel-command = "bash tools/repair-windows {wheel} {dest_dir}"

[[tool.cibuildwheel.overrides]]
select = "*-win_amd64"
